tests/resources-in-batch/0.single-resource/0.0.only-gatewayclass.yaml
---

apiVersion: v1
kind: ConfigMap
metadata:
  name: gatewayclass-config
  namespace: kube-system
data:
  any.config: xxx

---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: bigip
spec:
  controllerName: f5.io/gateway-controller-name
  parametersRef:
    group: ""
    kind: ConfigMap
    name: gatewayclass-config
    namespace: kube-system
