tests/resources-in-batch/0.single-resource/3.0.only-service.yaml

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-service
spec:
  replicas: 20
  selector:
    matchLabels:
      app: test-service
  template:
    metadata:
      labels:
        app: test-service
    spec:
      containers:
        - name: test-service
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: config-volume
              mountPath: /etc/nginx/njs/dumps.js
              subPath: dumps.js
      volumes:
        - name: config-volume
          configMap:
            name: nginx-config

---

apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: test-service

---

apiVersion: v1
kind: ConfigMap
metadata:
  name: nginx-config
data:
  nginx.conf: |
    user  nginx;
    worker_processes  1;

    load_module modules/ngx_http_js_module.so;

    events {
        worker_connections  1024;
    }

    http {
        js_import njs/dumps.js;
        server {
            listen       80;
            server_name  localhost;

            location / {
                js_content dumps.hello;
            }
        }
    }
  dumps.js: |
    function hello(r) {
        let d = {
            'queries': r.args,
            'headers': r.headersIn,
            'version': r.httpVersion,
            'method': r.method,
            'remote-address': r.remoteAddress,
            'body': r.requestText,
            'uri': r.uri,
            // 'server_name': "bigip.test.service"
        }

        r.return(200, JSON.stringify(d)+"\n");
    }

    export default {hello};
